# motionsim

./: .gitignore  pyproject.toml
motionsim/: __init__.py  lagrange.py
tests/: test_lagrange.py
