[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motionsim"
version = "0.1.0"
description = "Physics motion simulation library"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["motionsim"]

[tool.pytest.ini_options]
pythonpath = ["."]